src/components/gds-hint/gds-hint.scss
:host {
  position: relative;
  display: inline-block;
}

.icon {
  cursor: pointer;
  appearance: none;
  border: 0;
  background: none;
  padding: 0;
  outline: none;

  &-content {
    outline: none;
  }

  &:focus > .icon-content {
    outline: var(--gds-hint-outline-focus);
  }
}

.content {
  min-width: var(--gds-hint-min-width);
  max-width: var(--gds-hint-max-width);
  position: absolute;
  bottom: 100%;
  left: 100%;
  color: var(--gds-hint-color);
  background: var(--gds-hint-background);
  padding: var(--spacing-xxs);
  border: var(--gds-hint-border);
  border-radius: var(--gds-hint-border-radius);
  visibility: hidden;

  &.open {
    visibility: visible;
  }

  &:focus {
    outline: var(--gds-hint-outline-focus);
  }
}

